# diabetes_ai_service

./: .env.production  LLM_PROVIDERS_GUIDE.md  QDRANT_INTEGRATION_GUIDE.md  README.md  README_CLEAN_CODE.md  README_QDRANT_MIGRATION.md  README_SIMPLE_CODE.md  SIMPLE_SUMMARY.md  app.py  chunks.json  chunks_688a07f11d4029b44beefb03.json  debug_qdrant.py  debug_vectorstore.py  main.py  main1.py  output.json  output_blocks.json  output_file.json  parsed_output.json  pdf_chunks.json  pyproject.toml  requirements.txt  run.bat  run.py  run.sh  seed_data.py  start_qdrant.py  test.py  test1.py  test_chat_handler.py  test_final.py  test_llm_simple.py  test_qdrant_integration.py  test_qdrant_simple.py  test_simple.py
.github/workflows/: main.yml
api/: router.py
api/analyze/: routes.py
api/careplan/: routes.py
api/chatbot/: routes.py
app/: startup.py
app/api/: __init__.py  api.py
app/config/: __init__.py  database_config.py  minio_config.py  redis_config.py
app/database/: __init__.py  collections_config.py  connection.py  db_collections.py  index_config.py  manager.py
app/dto/: __init__.py  document_dto.py  knowledge_dto.py  pagination.py
app/nlp/: diabetes_classifier.py
app/storage/: __init__.py  minio_client.py  minio_manager.py
app/worker/: redis_client.py
core/: __init__.py  llm_client.py
core/cqrs/: base.py  command_registry.py  mediator.py  query_registry.py
core/embedding/: __init__.py  embedding_model.py  rerank_model.py
core/llm/: __init__.py  embedding_model.py  open_router_llm.py  qwen_llm.py
core/llm_old/: embedding_model.py  re_ranker_model.py
core/result/: models.py  result.py
data/: diabetes_words.json
database/: __init__.py  connection.py  manager.py
features/: validator.py
features/careplan/: careplan_generator.py
model/: diabetes_embeddings.pkl
models/: request.py  response.py
prompts/: agent_prompt.py
rag/: chunking.py  document_parser.py  embedding.py  re_ranker.py  reflection.py  retriever.py
rag/chunking/: base.py  chunker.py
rag_old/: chunking.py  embedding.py  re_ranker.py  retriever.py
shared/: __init__.py  default_rag_prompt.py  diabetes_words.json  vietnamese_words.json
src/: main.py
tests/: test_generator.py
utils/: __init__.py  cache.py  diabetes_scorer_utils.py  file_hash_utils.py  logger_utils.py  utils.py  vietnamese_language_utils.py
(+272 files in other folders)
